# WebfishingDECTalk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.h
DECTalkMod/: DECTalkMod.sln  LICENSE  README.md
DECTalkMod/DECTalkMod/: Config.cs  Helpers.cs  Mod.cs  manifest.json
DECTalkMod/DECTalkMod/Patches/: ModPatcher.cs  PlayerHUDPatcher.cs  PlayerLabelPatcher.cs  PlayerPatcher.cs  SoundManagerPatcher.cs
GDExtension/: library.cpp  library.h  windows-toolchain.cmake
Godot/: export_presets.cfg  project.godot
Godot/lib/: DECTalkLib.gdnlib
Godot/mods/deltaneverused.dectalk/: DecTalk.gdns  main.gd
